[package]
name = "tesseract_core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.100"
bytes = "1.11.0"
clap = { version = "4.5.52", features = ["derive"] }
config = "0.15.19"
directories = "6.0.0"
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version="0.7.17", features = ["codec"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
